--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -6,6 +6,9 @@
   font-weight: 500;
   letter-spacing: 0.04em;
   margin: 0;
+  display: flex;
+  gap: 10px;
+  align-items: center;
 }
 .contacNumber {
   color: black;
@@ -14,6 +17,9 @@
   font-weight: 500;
   letter-spacing: 0.04em;
   margin: 0;
+  display: flex;
+  gap: 10px;
+  align-items: center;
 }
 .btn {
   font-weight: 500;
@@ -32,9 +38,14 @@
   margin-top: 40px;
 }
 
+.btn:hover {
+  background-color: grey;
+}
+
 .contactMainConteiner {
-  padding-top: 10px;
+  width: 200px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  gap: 10px;
 }
