--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -4,14 +4,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0;
   margin-top: 40px;
-  padding-left: 20px;
+  padding-left: 10px;
   gap: 15px;
 }
 
 .contactListItem {
-  width: 100%;
+  box-sizing: border-box;
+  width: 400px;
   height: 100px;
   border-radius: 4px;
   border: 1px solid black;
