--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -3,18 +3,16 @@
   display: flex;
   flex-direction: column;
   margin-top: 40px;
-  margin-left: 20px;
 }
 
 .inputSearch {
   border-radius: 4px;
-  border: 1px solid #939191;
+  border: 1px solid black;
   height: 40px;
-  font-size: 12px;
+  font-size: 20px;
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  padding-bottom: 10px;
 }
 
 .textSearch {
