--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -7,3 +7,12 @@
   flex-direction: column;
   margin-bottom: 16px;
 }
+
+.btnLogIn {
+  color: black;
+  background-color: #cfcfd4;
+}
+
+.btnLogIn:hover {
+  background-color: grey;
+}
