--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -35,7 +35,7 @@
   align-items: center;
   justify-content: center;
   margin-left: 100px;
-  margin-top: 40px;
+  margin-top: 20px;
 }
 
 .btn:hover {
@@ -48,4 +48,24 @@
   flex-direction: column;
   justify-content: center;
   gap: 10px;
+}
+
+.btnClose {
+  font-weight: 500;
+  letter-spacing: 0.04em;
+  color: black;
+  cursor: pointer;
+  background-color: #cfcfd4;
+  border: none;
+  border-radius: 4px;
+  width: 80px;
+  height: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.btnClose:hover {
+  background-color: grey;
 }
